2010-11-17  Ernesto Baschny  <ernst@cron-it.de>

	* Added feature #16027: Let typolink honour secure filelink configuration

2010-11-17  Benjamin Mack  <benni@typo3.org>

	* Added feature #4203: Workspace DB / filemounts should narrow down the users' mounts (Thanks to Sonja Scholz)

2010-11-17  Susanne Moog  <typo3@susanne-moog.de>

	* Added feature #16284: Optimize stdWrap usage for TypoScript content element LOAD_REGISTER (Thanks to Jo Hasenau)
	* Added feature #16285: Optimize stdWrap usage for TypoScript content element RECORDS (Thanks to Jo Hasenau)
	* Added feature #15916: Display a link to list module on sysfolders when in page module (Thanks to Georg Ringer)
	* Fixed bug #16107: listNum = 0 not working anymore due to stdWrap changes (Thanks to Jo Hasenau)

2010-11-17  Oliver Hader  <oliver@typo3.org>

	* Updated Workspaces to version 4.5.0beta1. See their ChangeLog for details.

2010-11-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #2474: htmlArea RTE: Add general element properties editing dialogue
	* Fixed bug #16431: htmlArea RTE: in WebKit, clicking on image does not select it
	* Follow-up to feature #2474: htmlArea RTE: Add general element properties editing dialogue
	* Fixed bug #16433: htmlArea RTE: Default action not prevented on click in status bar

2010-11-16  Jeff Segars  <jeff@webempoweredchurch.org>

	* Added feature #7199: Add TypoScript options to remove spaces and file extensions from link text for uploads (Thanks to Steffen Ritter)

2010-11-16  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to #16315: Fatal error when deinstalling extension which is dependency of some other installed extension
	* Added feature #16360: [saltedpasswords] Provide a task for bulk update of passwords for use with saltedpasswords (Thanks to Marcus Krause)

2010-11-16  Steffen Gebert  <steffen@steffen-gebert.de>

	* Follow-up to #16403: Fixed inclusion of JS files in template.php (Thanks to Steffen Ritter)